--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,40 @@ dist
 dist-ssr
 *.local
 
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.env
+.venv
+env/
+venv/
+
+# Backend
+backend/.venv
+backend/.python-version.local
+backend/*.db
+backend/circus_scores.db
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
