--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
   "uvicorn[standard]>=0.30,<0.31",
   "sqlalchemy>=2.0,<3.0",
   "pydantic>=2.7,<3.0",
+  "psycopg2-binary>=2.9,<3.0",
 ]
 
 [project.optional-dependencies]
