refactor: simplify Render config to single-container deployment
- Remove separate frontend static service
- Consolidate to single web service (circus-app)
- Backend now serves both API and UI via Docker
- Add healthCheckPath: /health for monitoring
- Eliminate CORS_ORIGINS and VITE_API_BASE_URL (same origin)
- Reduce to one web service + database for cost efficiency
- Compatible with Render Free/Starter plan

--- a/render.yaml
+++ b/render.yaml
@@ -1,27 +1,16 @@
 services:
   - type: web
-    name: circus-backend
+    name: circus-app
     runtime: docker
-    plan: starter
+    plan: free
     dockerfilePath: Dockerfile
+    healthCheckPath: /health
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: circus_db
           property: connectionString
-      - key: CORS_ORIGINS
-        value: https://circus-frontend.onrender.com
-
-  - type: web
-    name: circus-frontend
-    runtime: static
-    buildCommand: cd frontend && npm ci && npm run build
-    staticPublishPath: frontend/dist
-    envVars:
-      - key: VITE_API_BASE_URL
-        value: https://circus-backend.onrender.com
 
 databases:
   - name: circus_db
-    plan: starter
-    region: oregon
+    plan: free
