fix(gitignore): unignore frontend/src/lib for source utilities\n\n- Generic 'lib/' pattern was ignoring frontend/src/lib\n- Add negation rules to track frontend/src/lib/**\n- Enables committing utils.ts and api helpers under frontend/src/lib

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ MANIFEST
 env/
 venv/
 
+# Allow frontend source utilities folder (ignored by generic lib/ rule)
+!frontend/src/lib/
+!frontend/src/lib/**
+
 # Backend
 backend/.venv
 backend/.python-version.local
