--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,16 +40,17 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install backend dependencies
         working-directory: ./backend
-        run: |
-          ~/.cargo/bin/uv sync --all-extras
+        run: uv sync --all-extras
 
       - name: Run backend tests
         working-directory: ./backend
-        run: ~/.cargo/bin/uv run pytest tests/test_api.py -v
+        run: uv run pytest tests/test_api.py -v
 
   # Optional: Docker build sanity check
   docker-build:
